--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,12 +1,12 @@
 footer
 {
-    background-color: #00FF00;
+    background-color: #ffffff;
     height: 60px;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
     bottom: 0;
-    margin-top: 60px;
+    left: 0;
+    border-top: 1px solid #cccccc
 }
