--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,5 +1,8 @@
 header {
-	background-color: #FF0000;
+	background-color: white;
+	background-image: url(../images/logo.png);
+	background-repeat: no-repeat;
 	height: 70px;
 	width: 100%;
+	border-bottom: 1px solid #CCCCCC;
 }
