--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,9 +1,10 @@
 footer {
-	background-color: #00FF00;
+	background-color: white;
 	width: 100%;
-	height: 70px;
+	height: 60px;
 	position: fixed;
 	bottom: 0;
 	text-align: center;
-	line-height: 70px;
+	line-height: 60px;
+	border-top: 1px solid #CCCCCC;
 }
