--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -33,7 +33,7 @@ button:hover{
     justify-content: center;
 	height: 100%;
 	width: 25%;
-	padding-left: 2.5em; 
+	position: relative
 }
 
 .locations {
@@ -47,4 +47,52 @@ button:hover{
 .filters div h4 {
 	font-weight: 400;
 	font-size: 14px;
+}
+
+.filters div h4,
+.filters div h3 {
+	margin-left: 30px;
+}
+.popover{
+	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	position: absolute;
+	width: 100%;
+	top: 100%;
+	background-color: #FAFAFA;
+	border: 1px solid #DDDDDD;
+	border-radius: 4px;
+	padding: 1.5rem 1rem;
+	display: none;
+}
+
+.amenities .popover {
+	padding: 2rem;
+}
+
+.popover ul li,
+.popover li {
+	list-style: none;
+	margin-left: 25px;
+}
+
+.popover > li{
+	margin-top: 5px;
+}
+
+.popover h2 {
+	margin-top: 10px;
+	font-size: 16px;
+}
+
+
+
+.amenities:hover > .popover{
+	display: block;
+}
+
+.locations:hover > .popover{
+	display: block;
 }
