--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -66,6 +66,7 @@ button:hover{
 	border-radius: 4px;
 	padding: 1.5rem 1rem;
 	display: none;
+	z-index: 100;
 }
 
 .amenities .popover {
@@ -86,7 +87,6 @@ button:hover{
 	margin-top: 10px;
 	font-size: 16px;
 }
-
 
 
 .amenities:hover > .popover{
